--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "homepage": "https://github.com/IDSAD-XL/bragiliev#readme",
   "dependencies": {
+    "@headlessui/react": "^1.7.15",
     "autoprefixer": "^10.4.14",
     "eslint-config-next": "13.2.4",
     "next": "13.1.1",
