--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "homepage": "https://github.com/IDSAD-XL/bragiliev#readme",
   "dependencies": {
     "@headlessui/react": "^1.7.15",
+    "@reduxjs/toolkit": "^1.9.5",
     "autoprefixer": "^10.4.14",
     "eslint-config-next": "13.2.4",
     "next": "13.1.1",
@@ -37,6 +38,7 @@
     "prettier-plugin-tailwindcss": "^0.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-redux": "^8.1.0",
     "sass": "^1.63.3",
     "swiper": "^9.4.1"
   },
