--- a/package.json
+++ b/package.json
@@ -34,11 +34,15 @@
     "@reduxjs/toolkit": "^1.9.5",
     "autoprefixer": "^10.4.14",
     "eslint-config-next": "13.2.4",
+    "formik": "^2.4.2",
     "next": "13.1.1",
     "postcss": "^8.4.24",
     "prettier-plugin-tailwindcss": "^0.3.0",
     "react": "18.2.0",
+    "react-date-picker": "^10.2.0",
+    "react-datetime-picker": "^5.2.0",
     "react-dom": "18.2.0",
+    "react-phone-input-2": "^2.15.1",
     "react-redux": "^8.1.0",
     "sass": "^1.63.3",
     "swiper": "^9.4.1"
