--- a/.github/workflows/firebase-dev-preview-pull-request.yml
+++ b/.github/workflows/firebase-dev-preview-pull-request.yml
@@ -4,20 +4,17 @@ name: Deploy to Firebase Hosting on dev PR
     branches:
       - dev
 jobs:
-  build:
+  build_and_deploy:
     runs-on: ubuntu-latest
     steps:
       - run: npm ci && npm run build
-  deploy:
-    runs-on: ubuntu-latest
-    steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: 14
+          node-version: 16
 
       - name: Install Firebase CLI
         run: npm install -g firebase-tools
