--- a/.github/workflows/firebase-dev-preview-pull-request.yml
+++ b/.github/workflows/firebase-dev-preview-pull-request.yml
@@ -7,8 +7,8 @@ jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/setup-node@v2
       - name: Set up Node.js
+        uses: actions/setup-node@v2
         with:
           node-version: 16
 
