--- a/.github/workflows/firebase-dev-preview-pull-request.yml
+++ b/.github/workflows/firebase-dev-preview-pull-request.yml
@@ -21,5 +21,5 @@ jobs:
           curl -X POST \
             -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
             -H "Accept: application/vnd.github.v3+json" \
-            -d '{"body": "Live preview of this pull request: ${{steps.firebase_deploy.outputs.summary}}"}' \
+            -d '{"body": "Live preview of this pull request here: ${{steps.firebase_deploy.outputs.summary}}"}' \
             "https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.pull_request.number }}/comments"
