--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@headlessui/tailwindcss": "^0.1.3",
     "@reduxjs/toolkit": "^1.9.5",
     "autoprefixer": "^10.4.14",
+    "classnames": "^2.3.2",
     "eslint-config-next": "13.2.4",
     "formik": "^2.4.2",
     "next": "13.1.1",
