--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "autoprefixer": "^10.4.14",
     "classnames": "^2.3.2",
+    "dotenv": "^16.3.1",
     "eslint-config-next": "13.2.4",
     "formik": "^2.4.2",
     "next": "13.1.1",
