--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "next dev",
-    "build": "next build && next export",
+    "dev": "cross-env NODE_ENV=development next dev",
+    "build": "cross-env NODE_ENV=production next build && next export",
+    "postbuild": "cross-env NODE_ENV=production next-sitemap",
     "start": "next start",
     "type-check": "tsc",
     "lint": "next lint --fix",
@@ -34,10 +35,12 @@
     "@reduxjs/toolkit": "^1.9.5",
     "autoprefixer": "^10.4.14",
     "classnames": "^2.3.2",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.3.1",
     "eslint-config-next": "13.2.4",
     "formik": "^2.4.2",
     "next": "13.1.1",
+    "next-sitemap": "^4.2.3",
     "postcss": "^8.4.24",
     "prettier-plugin-tailwindcss": "^0.3.0",
     "react": "18.2.0",
