--- a/.github/workflows/firebase-dev-preview-pull-request.yml
+++ b/.github/workflows/firebase-dev-preview-pull-request.yml
@@ -9,6 +9,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: npm ci && npm run build
+      - run: npm run build
       - uses: FirebaseExtended/action-hosting-deploy@v0
         id: firebase_deploy
         with:
